--- a/index.html
+++ b/index.html
@@ -150,3 +150,6 @@
         <div class="header-container">
             <h1><a href="#">Amazon</a></h1>
             <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href
